dark mode btn position fix

--- a/src/App.css
+++ b/src/App.css
@@ -2,18 +2,21 @@ body {
     margin: 0;
     padding: 0;
     font-family: Arial, sans-serif;
-    background-color: #000;
-    color: #fff;
 }
+
 
 .app {
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     align-items: center;
     justify-content: center;
     min-height: 100vh;
     transition: all 0.3s ease;
+    background-color: white;
+}
 
+.app.dark-mode{
+    background-color: black;
 }
 
 .light-mode {
@@ -21,7 +24,7 @@ body {
 }
 
 .dark-mode .container {
-    background-color: rgb(40, 40, 58);
+    background-color: rgb(17 17 17);
     color: white;
 }
 
@@ -97,7 +100,9 @@ input {
     user-select: none;
     border-radius: 20px;
     height: 22px;
-    position: relative;
+    position: absolute;
+    top:0px;
+    right:2px;
     box-sizing: border-box;
     padding: 0 1px;
 }
